修改扣费逻辑